--- a/pom.xml
+++ b/pom.xml
@@ -9,30 +9,6 @@
     <version>3.0</version>
 
 
-    <inceptionYear>2015</inceptionYear>
-    <organization>
-        <name>dc-square GmbH</name>
-        <url>http://www.dc-square.de</url>
-    </organization>
-
-    <developers>
-        <developer>
-            <id>flimpoec</id>
-            <name>Florian Limpöck</name>
-            <email>florian.limpoeck@dc-square.de</email>
-            <organization>dc-square GmbH</organization>
-            <organizationUrl>http://www.dc-square.de</organizationUrl>
-        </developer>
-        <developer>
-            <id>dobermai</id>
-            <name>Dominik Obermaier</name>
-            <email>dominik.obermaier@dc-square.de</email>
-            <organization>dc-square GmbH</organization>
-            <organizationUrl>http://www.dc-square.de</organizationUrl>
-        </developer>
-    </developers>
-
-
     <dependencies>
         <dependency>
             <groupId>com.hivemq</groupId>
@@ -43,8 +19,14 @@
         <dependency>
             <groupId>com.zaxxer</groupId>
             <artifactId>HikariCP</artifactId>
-            <version>1.3.8</version>
+            <version>2.6.1</version>
             <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
@@ -68,7 +50,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>2.0</version>
+                <version>3.0.0</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -109,8 +91,7 @@
                                     <goal>hivemq</goal>
                                 </goals>
                                 <configuration>
-                                    <hiveMQDir>FIXME, insert your HiveMQ directory here!</hiveMQDir>
-                                    <debugMode>SERVER</debugMode>
+                                    <hiveMQDir>/Users/cenyol/Desktop/hivemq-3.2.3</hiveMQDir>
                                 </configuration>
                             </execution>
                         </executions>
@@ -119,39 +100,5 @@
             </build>
         </profile>
     </profiles>
-
-
-    <licenses>
-        <license>
-            <name>The Apache Software License, Version 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-        </license>
-    </licenses>
-
-
-    <repositories>
-        <repository>
-            <id>repository.hivemq.com</id>
-            <name>HiveMQ Repository</name>
-            <url>http://repository.hivemq.com:8081/nexus/content/groups/public/</url>
-            <releases>
-            </releases>
-            <snapshots>
-            </snapshots>
-        </repository>
-    </repositories>
-
-    <pluginRepositories>
-        <pluginRepository>
-            <id>repository.hivemq.com</id>
-            <name>HiveMQ Repository</name>
-            <url>http://repository.hivemq.com:8081/nexus/content/groups/public/</url>
-            <releases>
-            </releases>
-            <snapshots>
-            </snapshots>
-        </pluginRepository>
-    </pluginRepositories>
-
 
 </project>
